# Fingerprint

./: CMakeLists.txt  Makefile  README.md
data/: LiAl-hydrate.ascii  benzene.xyz  paracetamol.xyz  perovskite.ascii
src/: fingerprint.f90  fp_distance.f90  fp_for_clusters.f90  fp_for_crystals.f90  fp_simplex.f90  hung.f90  plot_correlation.gnuplot  plot_derivative.gnuplot  plot_derivative_simplex.gnuplot  plot_results.gnuplot  rot.f90  simplex.f90  test_derivative.f90  test_invariance.f90  test_simplex.f90
